Localstorage de balizas y swagger final
